# FlashFeed

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: market_data_AAPL.csv  market_data_GOOGL.csv  market_data_MSFT.csv
include/: BenchMark.hpp  Configuration.hpp  DataParser.hpp  Logger.hpp  MarketDataServer.hpp
include/gui/: GuiMetaTypes.hpp  MainWindow.hpp  MarketDataTableModel.hpp  MarketDataWorker.hpp
input/: config.json
src/: Configuration.cpp  DataParser.cpp  MainServer.cpp  MarketDataServer.cpp
src/gui/: MainGui.cpp  MainWindow.cpp  MarketDataTableModel.cpp  MarketDataWorker.cpp
